fixes the yellow background issue on IE

--- a/src/sass/_accessibility.scss
+++ b/src/sass/_accessibility.scss
@@ -61,6 +61,11 @@
     white-space: normal !important;
 }
 
-*:focus {
-    background: #ffdd00;
+a,
+button,
+input[type="submit"],
+input[type="reset"] {
+    &:focus  {
+        background-color: #ffdd00 !important;
+    }
 }
